--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,12 @@
 
     <groupId>com.heima</groupId>
     <artifactId>heima-leadnews</artifactId>
+<!--    早期打包方式为war包,可以把包部署在tomcat-->
+<!--    出来springBoot之后打包方式为jar包,内置了tomcat-->
+<!--    微服务则是pom,仅仅是光杆司令-->
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+<!--    聚合，统一进行生命周期的管理-->
     <modules>
         <module>heima-leadnews-common</module>
         <module>heima-leadnews-utils</module>
