--- a/heima-leadnews-test/freemarker-demo/pom.xml
+++ b/heima-leadnews-test/freemarker-demo/pom.xml
@@ -34,7 +34,12 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-
+<!--        &lt;!&ndash; fastjson &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>com.alibaba</groupId>-->
+<!--            <artifactId>fastjson</artifactId>-->
+<!--            <version>1.2.73</version>-->
+<!--        </dependency>-->
         <!-- apache 对 java io 的封装工具库 -->
         <dependency>
             <groupId>org.apache.commons</groupId>
