第二十三次提交：自媒体文章发布--素材上传 @RestController@RequestMapping("/api/v1/material") public class WmMaterialController { @Autowired--private WmMaterialService wmMaterialService; @PostMapping("/upload_picture") public ResponseResult uploadPicture(MultipartFile multipartFile){ ResponseResult responseResult = wmMaterialService.uploadPicture(multipartFile); return responseResult;} 需要引入上传minio的组件--heima-file-starter @Service @Transactional(rollbackFor = Exception.class)//默认只对RuntimeException有效,根据阿里规范需要对全部异常回滚 public class WmMaterialServiceImpl extends ServiceImpl<WmMaterialMapper, WmMaterial> implements WmMaterialService { //面向接口编程,上传minio的组件 @Autowired--rivate FileStorageService fileStorageService; public ResponseResult uploadPicture(MultipartFile multipartFile) { //1.检查参数是否携带 if(multipartFile!=null && multipartFile.getSize()==0){//此时参数无效,抛出自定义异常 throw new CustomException(AppHttpCodeEnum.PARAM_INVALID);} //2.参数合法后,获取当前用户id Integer userId = WmThreadLocalUtil.getUserId(); if (userId==null){//说明登录出现问题,此时ThreadLocal没有用户信息 throw new CustomException(AppHttpCodeEnum.NEED_LOGIN);} //3.此时参数合法,用户登录,将图片上传到minio中,需要将组件注入(添加依赖) //4.参数二是上传到minio后文件的名字 //5.原始文件名 String originalFilename = multipartFile.getOriginalFilename(); //6.使用UUID重新生成文件名，防止文件名称重复造成文件覆盖，使用uuid产生的随机名可能会有-，因此需要把-替换为空replace("-",""); String fileName = UUID.randomUUID().toString().replace("-","");;//dfsdfdfd.jpg //7.截取后缀，包括后缀. //8.注意：截取后缀后要记得进行处理，用户可能传递的没有后缀或者后缀不对，如果没有后缀originalFilename.lastIndexOf(".")返回的是-1 //即需要进行判断 if(originalFilename.lastIndexOf(".")!=-1){ //9.此时就是存在.的时候，截取后缀 String suffix = originalFilename.substring(originalFilename.lastIndexOf(".")); //10.此时取到的是符合的后缀，使用UUID重新生成文件名，防止文件名称重复造成文件覆盖 fileName = fileName + suffix;//dfsdfdfd.xxx} //11.执行上传文件操作，并进行异常处理 String filePath=null; try {filePath = fileStorageService.uploadImgFile("", fileName, multipartFile.getInputStream()); log.info("上传图片到MinIO中，fileId:{}",filePath);} catch (IOException e) { //e.printStackTrace(); //打印在控制台 log.error("上传文件失败",e); //12.抛出异常作用：1.事务回滚 2.通过全

--- a/heima-leadnews-service/heima-leadnews-wemedia/src/main/resources/bootstrap.yml
+++ b/heima-leadnews-service/heima-leadnews-wemedia/src/main/resources/bootstrap.yml
@@ -10,3 +10,7 @@ spring:
       config:
         server-addr: 192.168.200.130:8848
         file-extension: yml
+#处理上传文件过大问题，记得还有nginx可能出现问题
+  servlet:
+    multipart:
+      max-file-size: 100MB
